# stundrg-check-os-ver

./: README.md  pyproject.toml  stundrg-random-pic-while.sh
src/: .hi.py.swo  .hi.py.swp  hi.py
src/stundrg_check_os_ver/: .osver.py.swp  hi.py  osver.py
tests/: test_first.py
