[project]
name = "stundrg-check-os-ver"
version = "0.3.0"
description = "Utility that checks the name and version of the operating system."
authors = [
    {name = "khr0106", email = "kanghr990106@gmail.com"},
]
dependencies = ["check-os-ver>=0.2.1"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[project.urls]
Homepage = "https://github.com/stundrg/stundrg-check-os-ver"
Issues = "https://github.com/stundrg/stundrg-stundrg-check-os-ver/issues"


[project.scripts]
stundrg-hi = "stundrg_check_os_ver.hi:hi"
stundrg-random = "stundrg_check_os_ver.hi:random_pic"
