[project]
name = "stundrg-check-os-ver"
versionr= "0.4.0"
description = "Utility that checks the name and version of the operating system."
authors = [
    {name = "khr0106", email = "kanghr990106@gmail.com"},
]
dependencies = ["check-os-ver>=0.2.1", "hj-check-os-version>=0.3.4", "lucas-check-os-ver>=0.2.1", "jacob-os-version-check>=0.2.4", "cho-check-os-ver>=0.2.3", "seo-check-os-version>=0.2.0", "nunininu-check-os-ver>=0.3.0"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[project.urls]
Homepage = "https://github.com/stundrg/stundrg-check-os-ver"
Issues = "https://github.com/stundrg/stundrg-stundrg-check-os-ver/issues"


[project.scripts]
stundrg-hi = "stundrg_check_os_ver.hi:hi"
stundrg-random = "stundrg_check_os_ver.hi:random_pic"
